--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,12 @@ dependencies {
     implementation 'androidx.webkit:webkit:1.5.0'
     implementation 'commons-codec:commons-codec:1.15'
     implementation files('../libs/NpSdk-release.aar')
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+
 }
